Adjust min size of skill bar to prevent text wrap

--- a/styles.css
+++ b/styles.css
@@ -307,7 +307,7 @@ svg {
   width: 100%;
   max-width: 900px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
   gap: 2rem;
   justify-content: center;
 }
